--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       const now = Date.now();
 
       // 앱 실행 시도
-      window.location.href = "market09view://market09/home";
+      window.location.href = "zerowaste://detail?id=12345";
 
       // fallback
       setTimeout(function () {
