인코딩이 되지 않도록 처리

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       const now = Date.now();
 
       // 앱 실행 시도
-      window.location.href = "zerowaste://detail?id=${id}";
+      window.location.href = 'zerowaste://detail?id=${id}';
 
       // fallback
       setTimeout(function () {
