--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         if (!isHidden && elapsed < 3000) {
           const ua = navigator.userAgent;
 
-          if (/android/i.test(ua)) {
-            window.location.href = "https://play.google.com/store/apps/details?id=com.jasonmg.market09";
-          } else if (/iphone|ipad|ipod/i.test(ua)) {
-            window.location.href = "https://apps.apple.com/kr/app/id1319138671";
-          } else {
-            alert("이 기기는 앱을 지원하지 않습니다.");
-          }
+          // if (/android/i.test(ua)) {
+          //   window.location.href = "https://play.google.com/store/apps/details?id=com.jasonmg.market09";
+          // } else if (/iphone|ipad|ipod/i.test(ua)) {
+          //   window.location.href = "https://apps.apple.com/kr/app/id1319138671";
+          // } else {
+          //   alert("이 기기는 앱을 지원하지 않습니다.");
+          // }
         }
       }, 1500);
     }
