--- a/index.html
+++ b/index.html
@@ -21,18 +21,15 @@
     function openApp() {
       const now = Date.now();
 
-      // 앱 실행 시도 - iframe 방식
-      const iframe = document.createElement('iframe');
-      iframe.style.display = 'none';
-      iframe.src = `zerowaste://detail?id=${id}`;
-      document.body.appendChild(iframe);
+      // 앱 실행 시도
+      window.location.href = `zerowaste://detail?id=${id}`;
 
       // fallback
       setTimeout(function () {
         const elapsed = Date.now() - now;
 
         // 앱이 정상적으로 실행되어 백그라운드로 가면 isHidden이 true가 됨
-        if (!isHidden && elapsed < 2500) {
+        if (!isHidden && elapsed < 3000) {
           const ua = navigator.userAgent;
 
           if (/android/i.test(ua)) {
